# qwit-desktop

./: CHANGELOG.md  README.md  bun.lockb  index.html  justfile  package-lock.json  package.json  release.toml  tailwind.config.js
.github/workflows/: release.yml  verify.yml
src/: App.tsx
src-tauri/: Cargo.toml  justfile  tauri.conf.json  test.csv
src-tauri/capabilities/: main.json
src-tauri/src/: main.rs  read_n_x.rs
src-tauri/src/csv/: read.rs
src/components/: alert.tsx  avatar.tsx  badge.tsx  button.tsx  checkbox.tsx  dialog.tsx  dropdown.tsx  fieldset.tsx  input.tsx  listbox.tsx  pagination.tsx  radio.tsx  select.tsx  switch.tsx  table.tsx  text.tsx  textarea.tsx  themeChooser.tsx
src/errorpages/: notExpected.tsx
src/parts/: converter.tsx  home.tsx  settings.tsx
src/parts/converter/: converter.tsx  pathsChooser.tsx  previewTable.tsx  separatorChooser.tsx
src/parts/csvTable/: csvTable.tsx  headerChooser.tsx
src/parts/reader/: pathsChooser.tsx  reader.tsx
src/root/: constants.tsx  navbar.tsx  routes.tsx  routing.tsx
src/utils/: utils.ts
