[package]
name = "qwit-desktop"
version = "0.0.2"
description = "A Tauri App"
authors = ["silen"]
license = "MIT"
documentation = "https://github.com/Qwitqwit/qwit-desktop"
homepage = "https://github.com/Qwitqwit/qwit-desktop"
repository = "https://github.com/Qwitqwit/qwit-desktop"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
