[package]
name = "qwit-desktop"
version = "0.0.6"
description = "A Tauri App"
authors = ["silen"]
license = "MIT"
documentation = "https://github.com/Qwitqwit/qwit-desktop"
homepage = "https://github.com/Qwitqwit/qwit-desktop"
repository = "https://github.com/Qwitqwit/qwit-desktop"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2.0.0-beta.4"
tauri-plugin-notification = "2.0.0-beta.3"
tauri-plugin-os = "2.0.0-beta.3"
tauri-plugin-process = "2.0.0-beta.3"
tauri-plugin-fs = "2.0.0-beta.4"
tauri-plugin-http = "2.0.0-beta.4"
tauri-plugin-clipboard-manager = "2.1.0-beta.0"
tauri-plugin-shell = "2.0.0-beta.3"


qwitlib = "0.3.3"
rand = "0.8.5"
walkdir = "2"
calamine = "0.24"


[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-global-shortcut = "2.0.0-beta.3"
